fixed hr width for responsive on mobile

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -60,7 +60,7 @@ hr {
   border-color: #8c8b8b; 
   border-width: 0 0 1px 0; 
   border-radius: 20px; 
-  width: 550px;
+  width: 50%;
   margin-left: 10%;
 }
 
@@ -88,3 +88,4 @@ hr {
 	font-size: 2em;
 	padding-top: 20px;
 }
+
